# qpanel

./: .bowerrc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  bower.json  bump_versions.txt  docker_build.sh  package-lock.json  package.json  pyproject.toml  tox.ini  travis.sh
docker/: Dockerfile
docker/dev/: Dockerfile.current  Dockerfile.repo
samples/: config.ini.template  env-defaults
scripts/: _plac.py  docker_build.py
src/qpanel/: __init__.py  app.py  backend.py  config.py  flask_themes  flask_themes.py  upgrader.py
src/qpanel/static/components/Chart.js/: .bower.json
src/qpanel/static/components/jquery.gritter/: .bower.json
src/qpanel/static/components/jquery.nicescroll/: .bower.json
src/qpanel/static/components/jquery.scrollTo/: .bower.json
src/qpanel/static/components/js-cookie/: .bower.json
src/qpanel/themes/qpanel/templates/: footer.html
src/qpanel/translations/de/LC_MESSAGES/: messages.mo
src/qpanel/translations/en/LC_MESSAGES/: messages.mo
src/qpanel/translations/es/LC_MESSAGES/: messages.mo
src/qpanel/translations/fr_FR/LC_MESSAGES/: messages.mo
src/qpanel/translations/pt_BR/LC_MESSAGES/: messages.mo
src/qpanel/translations/ru/LC_MESSAGES/: messages.mo
tests/: test_config.py  test_themes.py
